--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,19 @@
-# Add API key
-- name: Add API key secret to file
-    env:
-        API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
+name: CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+    build:
+        runs-on: ubuntu-latest
+        environment: DEV
+
+        steps:
+        - name: Check out the repository
+          uses: actions/checkout@v2
+
+        - name: Run a script with a secret
+          run: echo "The API key is ${{ secrets.API_KEY_SECRET }}"
