--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,5 +15,18 @@ jobs:
         - name: Check out the repository
           uses: actions/checkout@v2
 
+        - name: Set up Node.js
+          uses: actions/setup-node@v2
+          with:
+            node-version: '14'
+
+        - name: Install dependencies
+          run: npm install
+
+        - name: Build the project
+          run: npm run build
+
         - name: Run a script with a secret
-          run: echo "The API key is ${{ secrets.API_KEY_SECRET }}"
+          env:
+            REACT_APP_API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
+          run: npm start
