--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,3 +26,4 @@ jobs:
         - name: Run a script with a secret
           env:
             REACT_APP_API_KEY_SECRET: ${{ secrets.API_KEY_SECRET }}
+          run: echo "No start command to run"
